src/components/Buttons/button.css
.magnetic-button {
  border: none;
  padding: 0;
  background: transparent;
  cursor: pointer;
  position: relative;
  z-index: 1;
  -ms-touch-action: none;
      touch-action: none;
}

.magnetic-button span {
  display: inline-block;
}

.button-1 {
  /* background: #075ab3; */
  display: flex;
  color: white;
  border-radius: 30px;
  border: 1px solid white;
  padding: 20px 40px;
  margin: 30px auto;
  /* margin: 50px 200px; */

}

.button-2 {
  height: 250px;
  width: 250px;
  border-radius: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border: 2px dashed #075ab3;
  color: #075ab3;
  display: block;
  font-size: 3rem;
  font-weight: bold;
  margin: 30px auto;
}

.button-3 {
  height: 450px;
  width: 450px;
  border-radius: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border: 2px dashed #075ab3;
  color: #075ab3;
  display: block;
  font-size: 3rem;
  font-weight: bold;
  margin: 30px auto;
}
/*# sourceMappingURL=button.css.map */

